--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# = datasource
+spring.datasource.url=jdbc:mysql://localhost:3306/menudb?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
 
+# = jpa
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
